# emodpy-hiv

./: .bump_version.cfg  .bumpversion.cfg  .gitattributes  .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Jenkinsfile  Jenkinsfile_parameterized  LICENSE  README.md  developer_installation.md  makefile  mkdocs.yml  project_workflow_readme.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/python/: create_sif_id.py
.github/workflows/: build_test.yaml  build_test_publish.yaml  emodpy-hiv-docs-rebuild.yml  lint.yml  mkdocs_build.yml  mkdocs_deploy.yml  promote_package_to_production.yml  publish_pypi.yml  test_and_bump_version.yml  tests_all.yml
docs/: Makefile  abbreviations.md  bib.md  conf.py  faq.rst  glossary.md  glossary.rst  index.md  index.rst  installation-py.rst  installation.md  installation.rst  make.bat  overview.rst  reference.rst  requirements.txt  variables.txt  virtual_environments.md
docs/_templates/: breadcrumbs.html  footer.html  footer_start.html
docs/csv/: 213-config-hiv.csv  campaign-agediagnostic.csv  campaign-antiretroviraltherapy.csv  campaign-antiretroviraltherapyfull.csv  campaign-artdropout.csv  campaign-artmortalitytable.csv  campaign-birthtriggerediv.csv  campaign-broadcastcoordinatorevent.csv  campaign-broadcastcoordinatoreventfromnode.csv  campaign-broadcastevent.csv  campaign-broadcasteventtoothernodes.csv  campaign-broadcastnodeevent.csv  campaign-calendareventcoordinator.csv  campaign-campaignevent.csv  campaign-campaigneventbyyear.csv  campaign-cd4diagnostic.csv  campaign-coitalactratechanger.csv  campaign-coitalactriskfactors.csv  campaign-communityhealthworkereventcoordinator.csv  campaign-condomusageprobabilitychanger.csv  campaign-controlledvaccine.csv  campaign-coveragebynodeeventcoordinator.csv  campaign-delayedintervention.csv  campaign-delayeventcoordinator.csv  campaign-femalecontraceptive.csv  campaign-firstnodewithnodepropertyeventcoordinator.csv  campaign-hivartstagingbycd4diagnostic.csv  campaign-hivartstagingcd4agnosticdiagnostic.csv  campaign-hivdelayedintervention.csv  campaign-hivdrawblood.csv  campaign-hivmuxer.csv  campaign-hivpiecewisebyyearandsexdiagnostic.csv  campaign-hivrandomchoice.csv  campaign-hivrapidhivdiagnostic.csv  campaign-hivsigmoidbyyearandsexdiagnostic.csv  campaign-hivsimplediagnostic.csv  campaign-immunitybloodtest.csv  campaign-importpressure.csv  campaign-incidenceeventcoordinator.csv  campaign-individualimmunitychanger.csv  (+92 more)
docs/emod/: HIVMortality.csv  RelationshipConsummated-Example.csv  RelationshipConsummated.csv  RelationshipEnd-Example.csv  RelationshipEnd.csv  RelationshipStart-Example.csv  RelationshipStart.csv  ReportEventRecorder-Example.csv  ReportHIVART-Example.csv  ReportHIVByAgeAndGender-Example.csv  ReportHIVByAgeAndGender.csv  ReportHIVInfection-Example.csv  ReportHIVInfection.csv  ReportRelationshipCensus-Example.csv  ReportRelationshipMigrationTracking-Example.csv  hiv-disease-overview.md  hiv-disease-overview.rst  hiv-model-healthcare-systems.md  hiv-model-healthcare-systems.rst  hiv-model-intrahost.md  hiv-model-intrahost.rst  hiv-model-overview.md  hiv-model-overview.rst  hiv-scenarios.rst  install-linux.rst  install-overview.rst  install-windows.rst  model-campaign.md  model-campaign.rst  model-care-cascade.md  model-care-cascade.rst  model-heterogeneity.md  model-heterogeneity.rst  model-migration.md  model-migration.rst  model-outbreak.md  model-outbreak.rst  model-overview.md  model-overview.rst  model-population-density.md  (+240 more)
docs/json/: campaign-agediagnostic-age-thresholds.json  campaign-antiretroviraltherapy.json  campaign-antiretroviraltherapyfull.json  campaign-artdropout.json  campaign-artmortalitytable-age-years-bins.json  campaign-artmortalitytable-art-duration-days-bins.json  campaign-artmortalitytable-cd4-count-bins.json  campaign-artmortalitytable-mortalitytable.json  campaign-artmortalitytable.json  campaign-calendareventcoordinator-distribution-coverages.json  campaign-cd4diagnostic-cd4-thresholds.json  campaign-cd4diagnostic.json  campaign-coitalactratechanger.json  campaign-coitalactriskfactors.json  campaign-communityhealthworkereventcoordinator-intervention-config.json  campaign-condomusageprobabilitychanger-overriding-condom-usage-probability.json  campaign-condomusageprobablitychanger.json  campaign-coveragebynodeeventcoordinator-coverage-by-node.json  campaign-coveragebynodeeventcoordinator-intervention-config.json  campaign-delayedintervention-actual-individualintervention-configs.json  campaign-delayeventcoordinator-stop-trigger-condition-list.json  campaign-femalecontraceptive.json  campaign-firstnodewithnodepropertyeventcoordinator-node-id-to-coordinator-event-list.json  campaign-firstnodewithnodepropertyeventcoordinator-start-trigger-condition-list.json  campaign-hivartstagingbycd4diagnostic-if-active-tb.json  campaign-hivartstagingbycd4diagnostic-if-pregnant.json  campaign-hivartstagingbycd4diagnostic-threshold.json  campaign-hivartstagingbycd4diagnostic-times.json  campaign-hivartstagingbycd4diagnostic.json  campaign-hivartstagingcd4agnosticdiagnostic-adult-by-pregnant.json  campaign-hivartstagingcd4agnosticdiagnostic-adult-by-tb.json  campaign-hivartstagingcd4agnosticdiagnostic-adult-by-who-stage.json  campaign-hivartstagingcd4agnosticdiagnostic-child-by-tb.json  (+153 more)
emodpy_hiv/: __init__.py  country_model.py  download.py  emod_task.py  parameterized_call.py  utils.py
examples/: image_name  snakefile  snakemake_config.json
notebooks/: Tutorial-1_IntroTo_emodpy-hiv.ipynb  Tutorial-2_AddingReportsAndPlottingData.ipynb  Tutorial-3_BuildFunctions.ipynb  Tutorial-4_OverridingStateInCoC.ipynb  manifest.py  plot_report_hiv_by_age_and_gender.py
tests/: README.md  base_sim_test.py  helpers.py  idmtools.ini  manifest.py  pytest.ini  requirements.txt  stage_sif.id
tutorials/: comps_sif_file.id  manifest.py  plot_report_hiv_by_age_and_gender.py  tutorial_1_intro.py  tutorial_2_reports.py  tutorial_3_build_functions.py  tutorial_4_overriding_coc.py
(+317 files in other folders)
