[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "emodpy-hiv"
version = "3.0.0"
description = "IDM's HIV-specific EMOD-API binding code"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Sharon Chen", email = "sharon.chen@gatesfoundation.org"},
    {name = "Zhaowei Du", email = "zhaowei.du@gatesfoundation.org"},
    {name = "Clark Kirkman IV", email = "clark.kirkmand@gatesfoundation.org"},
    {name = "Daniel Bridenbecker", email = "daniel.bridenbecker@gatesfoundation.org"},
    {name = "Svetlana Titova", email = "svetlana.titova@gatesfoundation.org"},
    {name = "Ye Chen", email = "ye.chen@gatesfoundation.org"},
]
keywords = ["modeling", "IDM"]
dependencies = [
    "emodpy~=3.0",
    "pandas",
    "scikit-learn",
    "python-calamine",
    "emod-hiv==2.30.0",
]
license = "MIT"
classifiers=[
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
docs = [
    "sphinxext.remoteliteralinclude~=0.4.0",
    "sphinx",
    "pydata-sphinx-theme",
    "sphinxcontrib-programoutput~=0.17",
    "nbsphinx~=0.9",
    "jupyterlab~=4.0",
    "myst-parser~=2.0",
    "readthedocs-sphinx-search~=0.3",
    "sphinx-copybutton~=0.5",
    "pygithub~=1.57",
    "sphinxcontrib-jquery~=4.1",
    "chardet<6.0.0",
]
lint = [
    "flake8",
]
packaging = [
    "build",
    "flake8",
    "coverage",
    "py-make",
    "bump2version",
    "twine",
]
test = [
    "emod-hiv",
    "pytest",
    "pytest-xdist",
    "pytest-runner",
    "pytest-timeout",
    "pytest-cache",
    "flake8",
    "coverage",
    "py-make",
    "pillow",
]

[project.urls]
Repository="https://github.com/EMOD-Hub/emodpy-hiv"
Issues="https://github.com/EMOD-Hub/emodpy-hiv/issues"

[tool.setuptools.packages]
find = {include = ["emodpy_hiv*"]}

[tool.setuptools.package-data]
emodpy_hiv = [
    "countries/*.csv",
    "countries/**/*.csv",
    "countries/*.xls",
    "countries/**/*.xls",
    "countries/*.xlsx",
    "countries/**/*.xlsx",
    "countries/*.XLS",
    "countries/**/*.XLS",
    "countries/*.XLSX",
    "countries/**/*.XLSX"
]

[tool.pip]
extra-index-url = "https://packages.idmod.org/api/pypi/pypi-production/simple"

[tool.uv]
extra-index-url = ["https://packages.idmod.org/api/pypi/pypi-production/simple"]
