[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "emodpy-hiv"
version = "3.3.1"
description = "IDM's HIV-specific EMOD-API binding code"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Sharon Chen", email = "sharon.chen@gatesfoundation.org"},
    {name = "Zhaowei Du", email = "zhaowei.du@gatesfoundation.org"},
    {name = "Clark Kirkman IV", email = "clark.kirkmand@gatesfoundation.org"},
    {name = "Daniel Bridenbecker", email = "daniel.bridenbecker@gatesfoundation.org"},
    {name = "Svetlana Titova", email = "svetlana.titova@gatesfoundation.org"},
    {name = "Ye Chen", email = "ye.chen@gatesfoundation.org"},
]
keywords = ["modeling", "IDM"]
dependencies = [
    "emodpy~=3.3",
    "pandas~=3.0",
    "scikit-learn~=1.8",
    "python-calamine~=0.6",
    "emod-hiv~=2.35",
]
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings-python",
    "mkdocs-autoapi",
    "mkdocs-glightbox",
    "mkdocs-table-reader-plugin",
]
lint = [
    "flake8",
]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-runner",
    "pytest-timeout",
    "pytest-cache",
    "coverage",
    "py-make",
    "pillow",
    "snakemake",
]

[project.urls]
Repository = "https://github.com/EMOD-Hub/emodpy-hiv"
Documentation = "https://emod.idmod.org/emodpy-hiv/"
Issues = "https://github.com/EMOD-Hub/issues-and-discussions/issues"

[tool.setuptools.packages]
find = {include = ["emodpy_hiv*"]}

[tool.setuptools.package-data]
emodpy_hiv = [
    "countries/*.csv",
    "countries/**/*.csv",
    "countries/un_world_pop_data/WPP2015_*.XLS"
]

[tool.setuptools.exclude-package-data]
"*" = ["*.xlsx", "WPP2012_*.XLS"]

[tool.bumpversion]
current_version = "3.3.1"
commit = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "emodpy_hiv/__init__.py"
